--- a/site/cs/电子基础/index.html
+++ b/site/cs/电子基础/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/cs/%E7%94%B5%E5%AD%90%E5%9F%BA%E7%A1%80/">
+        <link rel="canonical" href="https://www.zmta.info/cs/%E7%94%B5%E5%AD%90%E5%9F%BA%E7%A1%80/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>电子基础 - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
