--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="None">
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/">
+        <link rel="canonical" href="https://www.zmta.info/">
         <link rel="shortcut icon" href="img/favicon.ico">
         <title>知识文档</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -450,5 +450,5 @@
 
 <!--
 MkDocs version : 1.4.3
-Build Date UTC : 2023-05-16 13:32:48.055664+00:00
+Build Date UTC : 2023-05-19 11:10:16.272927+00:00
 -->
