--- a/site/about/about/index.html
+++ b/site/about/about/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<link href="https://www.likui.info/wiki/site/about/about/" rel="canonical"/>
+<link href="https://www.zmta.info/about/about/" rel="canonical"/>
 <link href="../../img/favicon.ico" rel="shortcut icon"/>
 <title>About - 知识文档</title>
 <link href="../../css/bootstrap.min.css" rel="stylesheet"/>
