--- a/site/cs/好书推荐/index.html
+++ b/site/cs/好书推荐/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/cs/%E5%A5%BD%E4%B9%A6%E6%8E%A8%E8%8D%90/">
+        <link rel="canonical" href="https://www.zmta.info/cs/%E5%A5%BD%E4%B9%A6%E6%8E%A8%E8%8D%90/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>好书推荐 - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
