--- a/site/cs/必学工具/index.html
+++ b/site/cs/必学工具/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/cs/%E5%BF%85%E5%AD%A6%E5%B7%A5%E5%85%B7/">
+        <link rel="canonical" href="https://www.zmta.info/cs/%E5%BF%85%E5%AD%A6%E5%B7%A5%E5%85%B7/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>必学工具 - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
