--- a/site/cs/数学进阶/index.html
+++ b/site/cs/数学进阶/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/cs/%E6%95%B0%E5%AD%A6%E8%BF%9B%E9%98%B6/">
+        <link rel="canonical" href="https://www.zmta.info/cs/%E6%95%B0%E5%AD%A6%E8%BF%9B%E9%98%B6/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>数学进阶 - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
