--- a/site/cs/数据结构与算法/index.html
+++ b/site/cs/数据结构与算法/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/cs/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95/">
+        <link rel="canonical" href="https://www.zmta.info/cs/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>数据结构与算法 - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
