--- a/site/cs/编程入门/index.html
+++ b/site/cs/编程入门/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/cs/%E7%BC%96%E7%A8%8B%E5%85%A5%E9%97%A8/">
+        <link rel="canonical" href="https://www.zmta.info/cs/%E7%BC%96%E7%A8%8B%E5%85%A5%E9%97%A8/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>编程入门 - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
