--- a/site/dev-guide/translations/index.html
+++ b/site/dev-guide/translations/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/dev-guide/translations/">
+        <link rel="canonical" href="https://www.zmta.info/dev-guide/translations/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>Translations - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
