--- a/site/ppt/matlab/index.html
+++ b/site/ppt/matlab/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/ppt/matlab/">
+        <link rel="canonical" href="https://www.zmta.info/ppt/matlab/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>ppt - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
