--- a/site/read/Books/index.html
+++ b/site/read/Books/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/read/Books/">
+        <link rel="canonical" href="https://www.zmta.info/read/Books/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>Books - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
