--- a/site/user-guide/deploying-your-docs/index.html
+++ b/site/user-guide/deploying-your-docs/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://www.likui.info/wiki/site/user-guide/deploying-your-docs/">
+        <link rel="canonical" href="https://www.zmta.info/user-guide/deploying-your-docs/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>Deploying - 知识文档</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
