--- a/site/about/about/index.html
+++ b/site/about/about/index.html
@@ -243,14 +243,9 @@
 <td>UML图生成</td>
 </tr>
 </tbody>
-</table>
-<p><html></html></p>
-<script type="text/javascript">
-fanfou_name="ilikui";fanfou_count=10;fanfou_timeline="user";</script>
-<script charset="utf-8" src="https://static.fanfou.com/badge/timeline.js" type="text/javascript"></script>
-<p></p></div></div></div></body></html>
-
-
+</table></div>
+</div>
+</div>
 <footer class="col-md-12">
 <hr/>
 <p>Copyright © 2023 <a href="https://www.mkdocs.org/">MkDocs</a> <a "="" class="fa fa-rss-square" href="https://www.likui.info/wiki/site/feed_rss_created.xml" https:="" target="_blank&gt;&lt;/a&gt;.&lt;/p&gt;
@@ -322,5 +317,5 @@ fanfou_name="ilikui";fanfou_count=10;fanfou_timeline="user";</script>
 </div>
 </div>
 </div>
-
-
+</body>
+</html>
