--- a/site/about/about/index.html
+++ b/site/about/about/index.html
@@ -136,6 +136,14 @@
 </ul>
 </li>
 <li class="dropdown">
+<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">收藏 <b class="caret"></b></a>
+<ul class="dropdown-menu">
+<li>
+<a class="dropdown-item" href="../../collect/%E7%9B%AE%E5%BD%95/">简悦</a>
+</li>
+</ul>
+</li>
+<li class="dropdown">
 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">阅读 <b class="caret"></b></a>
 <ul class="dropdown-menu">
 <li>
