--- a/site/index.html
+++ b/site/index.html
@@ -163,6 +163,15 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">收藏 <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li>
+    <a href="collect/%E7%9B%AE%E5%BD%95/" class="dropdown-item">简悦</a>
+</li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">阅读 <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     
@@ -450,5 +459,5 @@
 
 <!--
 MkDocs version : 1.4.3
-Build Date UTC : 2023-05-21 12:01:08.498933+00:00
+Build Date UTC : 2023-09-03 01:44:39.568170+00:00
 -->
