--- a/site/read/Reading/index.html
+++ b/site/read/Reading/index.html
@@ -162,6 +162,15 @@
 </li>
                                 </ul>
                             </li>
+                            <li class="dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">收藏 <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li>
+    <a href="../../collect/%E7%9B%AE%E5%BD%95/" class="dropdown-item">简悦</a>
+</li>
+                                </ul>
+                            </li>
                             <li class="dropdown active">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">阅读 <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
@@ -193,7 +202,7 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a rel="prev" href="../../cs/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95/" class="nav-link">
+                                <a rel="prev" href="../../collect/%E7%9B%AE%E5%BD%95/" class="nav-link">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
