--- a/site/getting-started/index.html
+++ b/site/getting-started/index.html
@@ -163,6 +163,15 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">收藏 <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li>
+    <a href="../collect/%E7%9B%AE%E5%BD%95/" class="dropdown-item">简悦</a>
+</li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">阅读 <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     
