--- a/site/collect/目录/index.html
+++ b/site/collect/目录/index.html
@@ -169,6 +169,10 @@
 <li>
     <a href="./" class="dropdown-item active">简悦</a>
 </li>
+                                    
+<li>
+    <a href="../01_%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/" class="dropdown-item">精品嵌入式资源汇总</a>
+</li>
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -207,7 +211,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" href="../../read/Reading/" class="nav-link">
+                                <a rel="next" href="../01_%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
