--- a/site/about/about/index.html
+++ b/site/about/about/index.html
@@ -142,7 +142,7 @@
 <a class="dropdown-item" href="../../collect/%E7%9B%AE%E5%BD%95/">简悦</a>
 </li>
 <li>
-<a class="dropdown-item" href="../../collect/01_%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/">精品嵌入式资源汇总</a>
+<a class="dropdown-item" href="../../collect/%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/">精品嵌入式资源汇总</a>
 </li>
 </ul>
 </li>
