--- a/site/collect/目录/index.html
+++ b/site/collect/目录/index.html
@@ -171,7 +171,7 @@
 </li>
                                     
 <li>
-    <a href="../01_%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/" class="dropdown-item">精品嵌入式资源汇总</a>
+    <a href="../%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/" class="dropdown-item">精品嵌入式资源汇总</a>
 </li>
                                 </ul>
                             </li>
@@ -211,7 +211,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" href="../01_%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/" class="nav-link">
+                                <a rel="next" href="../%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
@@ -247,7 +247,7 @@
 <p>数据来源</p>
 </blockquote>
 <ul>
-<li><a href="01_精品嵌入式资源汇总.md.md">01_精品嵌入式资源汇总</a></li>
+<li><a href="../%E7%B2%BE%E5%93%81%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%B5%84%E6%BA%90%E6%B1%87%E6%80%BB/">01_精品嵌入式资源汇总</a></li>
 </ul></div>
             </div>
         </div>
